# grad-invitation-server

./: .env  Cargo.toml  Dockerfile
src/: main.rs  models.rs  routes.rs
src/db/: connection.rs  schema.sql
src/handlers/: event_attendance.rs  mod.rs
